# syssla

./: .gitignore  docker-compose.yml  readme.md
backend/: Dockerfile  pyproject.toml  state_template.json  syssla.py
backend/src/: state_template.json  syssla.py
backend/syssla/: state_template.json  syssla.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: app.tsx  column.tsx  initial-data.js  task.tsx  taskview.tsx
