[tool.poetry]
name = "syssla"
version = "0.1.0"
description = ""
authors = ["Alexander Ganslandt <alex.ganslandt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-cors = "^4.0.0"

[tool.poetry.scripts]
start = "syssla.syssla:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
